--- a/src/Components/Home/index.scss
+++ b/src/Components/Home/index.scss
@@ -2,7 +2,7 @@
 
     .text-zone{
         position: absolute;
-        left: 90%;
+        left: 9%;
         top: 50%;
         transform: translateY(-50%);
         width: 500%;
@@ -18,6 +18,7 @@
         margin: 0%;
         font-family: "Coolvetica";
         font-weight: 400;
+        text-shadow: #000;
         
         
         &::before{
@@ -86,11 +87,58 @@
         float: left;
         animation: fadeIn 1s 1.8s backwards;
         white-space: nowrap;
+        border-radius: 10px;
+        animation: pulseglow 2s infinite ease-in-out;
 
         &:hover{
             background: #ffd700;
             color: #333;
+            box-shadow: #ffd700;
+            animation-play-state: paused;
+            
+        @keyframes pulseglow {
+            0%{
+                box-shadow: 0 0 5px #ffd700;
+            }
+
+            50%{
+                box-shadow: 0 0 20px #ffd700;
+            }
+
+            100%{
+                box-shadow: 0 0 5px #ffd700;
+            }
+            }
         }
 
+
     }
+}
+
+.loader {
+  height: 100px;
+  aspect-ratio: 1;
+  padding: 10px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  position: fixed; // fullscreen center
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  mask: conic-gradient(#000 0 0) content-box exclude,
+        conic-gradient(#000 0 0);
+  filter: blur(12px);
+  z-index: 9999;
+}
+.loader:before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: repeating-conic-gradient(#0000 0 5%, #ffd700, #0000 20% 50%);
+  animation: l2 1.5s linear infinite;
+}
+@keyframes l2 {
+  to {
+    rotate: 1turn;
+  }
 }
