--- a/src/Components/Layout/index.scss
+++ b/src/Components/Layout/index.scss
@@ -1,5 +1,5 @@
 .page {
-    width: 100px;
+    width: 100%;
     height: 100%;
     position: absolute;
 }
@@ -16,7 +16,7 @@
     position: absolute;
     bottom: 0;
     left: 120px;
-    font-size: 18px;
+    font-size: 30px;
     font-family: "La Belle Aurore";
 }
 
@@ -33,33 +33,35 @@
     position: absolute;
     opacity: 0;
     top: 5%;
-    margin: 0, auto;
+    margin: 0 auto;
     transform-style:preserve-3d;
     animation: fadeIn 1s forwards;
     animation-delay: 1s;
     
 }
 
-.about-page{
+.about-page,
+.contact-page{
     .text-zone{
         position: absolute;
-        left: 100%;
-        top: 53%;
+        display: flex;
+        left: 10%;
+        top: 50%;
         transform: translateY(-50%);
-        width: 500%;
+        width: 35%;
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
 
         h1{
-            font-size: 53px;
+            font-size: 60px;
             font-family: 'Coolvetica';
             color: #ffd700;
             font-weight: 400;
             margin-top: 0;
             position: relative;
             margin-bottom: 40px;
-            left: 10px;
+            left: -5px;
             
              &::before{
                 content: '<h1>';
@@ -73,7 +75,7 @@
             }
 
             &::after{
-                content: '<h1/>';
+                content: '</h1>';
                 font-family: 'La Belle Aurore';
                 font-size: 18px;
                 line-height: 18px;
@@ -92,6 +94,7 @@
             font-weight: 300;
             min-width: fit-content;
             animation: pulse 1s;
+            left: -5px;
 
             &:nth-of-type(1){
                 animation-delay: 1.3s;
