--- a/src/Components/Sidebar/index.scss
+++ b/src/Components/Sidebar/index.scss
@@ -1,32 +1,34 @@
-.nav-bar{
-    background: #181818;
-    width: 60px;
-    height: 100%;
+.nav-bar {
+    background: #161616;
+    width: 75px;
+    height: 101%;
     position: absolute;
     top: 0;
-    z-index:3;
+    z-index: 3;
     min-height: 500px;
 
-    .logo{
-        display:block;
+
+
+    .logo {
+        display: block;
         padding: 8px 0;
 
-        img{
-            display:block;
+        img {
+            display: block;
             margin: 8px auto;
             width: 50px;
             height: 50px;
         }
 
-        &.sub-logo{
+        &.sub-logo {
             width: 50px;
-            
+
 
         }
     }
 
     nav {
-        display:block;
+        display: block;
         text-align: center;
         position: absolute;
         height: 210px;
@@ -34,36 +36,38 @@
         margin-top: -120px;
         width: 100%;
 
-        a{
+        a {
             font-size: 22px;
-            color: #4d4d4e;
+            color: #dddddd;
             display: block;
             line-height: 51px;
             height: 51px;
             position: relative;
             text-decoration: none;
-       
 
-            i{
+
+            i {
                 transition: all 0.3s ease-out;
             }
 
-            &:hover{
-                color:#ffd770;
+            &:hover {
+                color: #ffd770;
 
-                svg{
-                opacity: 0;
+                svg {
+                    opacity: 0;
                 }
 
-                &:after{
+                &:after {
                     opacity: 1;
                 }
             }
-            &:after{
+
+            &:after {
                 content: "";
                 font-size: 9px;
                 letter-spacing: 2px;
                 position: absolute;
+                font-family: sans-serif;
                 bottom: 0px;
                 display: block;
                 width: 100%;
@@ -71,33 +75,44 @@
                 opacity: 0;
                 transition: all 0.3s ease-out;
             }
-            &:first-child{
-                &::after{
-                content: "HOME";
+
+            &:first-child {
+                &::after {
+                    content: "HOME";
                 }
             }
         }
 
-        a.about-link{
-            &:after{
-                content: "ABOUT";
-            }
-        }
 
-        
-        a.contact-link{
-            &:after{
+
+
+
+        a.contact-link {
+            &:after {
                 content: "CONTACT";
             }
         }
 
-        a.active{
-            svg{
+        a.about-link {
+            &:after {
+                content: "ABOUT";
+            }
+        }
+
+        a.projects-link {
+            &:after {
+                content: "PROJECTS";
+            }
+        }
+
+        a.active {
+            svg {
                 color: #ffd700;
             }
         }
     }
-    ul{
+
+    ul {
         position: absolute;
         bottom: 20px;
         width: 100%;
@@ -107,13 +122,13 @@
         text-align: center;
         margin: 0;
 
-        li{
-            a{
-                padding: 7px 0 ;
+        li {
+            a {
+                padding: 7px 0;
                 display: block;
-                font-size: 15px;
+                font-size: 25px;
                 line-height: 16px;
-                
+
                 &:hover svg {
                     color: #ffd700;
                 }
