--- a/src/Components/Sidebar/index.scss
+++ b/src/Components/Sidebar/index.scss
@@ -2,7 +2,7 @@
     background: #161616;
     width: 75px;
     height: 101%;
-    position: absolute;
+    position: fixed;
     top: 0;
     z-index: 3;
     min-height: 500px;
