--- a/src/Components/Contact/index.scss
+++ b/src/Components/Contact/index.scss
@@ -62,6 +62,9 @@
          border-radius: 10px;
          font-family: sans-serif;
          margin-left: -10px;
+         box-shadow: 
+            inset 0 2px 5px rgba(0, 0, 0, 0.3),
+            inset 0 -2px 5px rgba(0, 0, 0, 0.3);
      }
 
      textarea {
@@ -78,8 +81,9 @@
          resize: none;
          font-family: sans-serif;
          margin-left: -10px;
-         
-         
+         box-shadow:
+             inset 0 2px 5px rgba(0, 0, 0, 0.3),
+             inset 0 -2px 5px rgba(0, 0, 0, 0.3);
      }
 
      .flat-button {
@@ -95,17 +99,18 @@
          cursor: pointer;
          display: block;
          margin-left: 580px;
+         
 
          animation: pulseglow 2s infinite ease-in-out;
-         
-         &:hover{
-            background: #ffd700;
-            color: #333;
-            box-shadow: #ffd700;
-            animation-play-state: paused;
-         
 
-        } 
+         &:hover {
+             background: #ffd700;
+             color: #333;
+             box-shadow: #ffd700;
+             animation-play-state: paused;
+
+
+         }
 
      }
 
@@ -178,4 +183,4 @@
      opacity: 0;
      animation: backInRight 1s 1.2s;
      animation-fill-mode: forwards;
-}
+ }
