--- a/src/Components/Contact/index.scss
+++ b/src/Components/Contact/index.scss
@@ -62,9 +62,9 @@
          border-radius: 10px;
          font-family: sans-serif;
          margin-left: -10px;
-         box-shadow: 
-            inset 0 2px 5px rgba(0, 0, 0, 0.3),
-            inset 0 -2px 5px rgba(0, 0, 0, 0.3);
+         box-shadow:
+             inset 0 2px 5px rgba(0, 0, 0, 0.3),
+             inset 0 -2px 5px rgba(0, 0, 0, 0.3);
      }
 
      textarea {
@@ -86,33 +86,106 @@
              inset 0 -2px 5px rgba(0, 0, 0, 0.3);
      }
 
-     .flat-button {
-         color: #ffd770;
-         background: transparent;
-         font-size: 11px;
-         letter-spacing: 3px;
-         text-decoration: none;
-         padding: 8px 10px;
-         border: 1px solid #ffd700;
-         border-radius: 10px;
-         font-family: sans-serif;
+     .send {
+         font-family: inherit;
+         font-size: 20px;
+         background: #ffd700;
+         color: white;
+         padding: 0.7em 1em;
+         padding-left: 0.9em;
+         display: flex;
+         align-items: center;
+         border: none;
+         border-radius: 16px;
+         overflow: hidden;
+         transition: all 0.2s;
          cursor: pointer;
-         display: block;
-         margin-left: 580px;
-         
-
+         margin-left: 530px;
          animation: pulseglow 2s infinite ease-in-out;
 
          &:hover {
-             background: #ffd700;
-             color: #333;
-             box-shadow: #ffd700;
-             animation-play-state: paused;
+               background: #ffd700;
+               color: #333;
+               box-shadow: #ffd700;
+               animation-play-state: paused;
 
 
+        }
+
+         .svg-wrapper-1 {
+             display: flex;
+             align-items: center;
          }
 
+         span {
+             display: block;
+             margin-left: 0.3em;
+             transition: all 0.3s ease-in-out;
+         }
+
+         svg {
+             display: block;
+             transform-origin: center center;
+             transition: transform 0.3s ease-in-out;
+         }
+
+         &:hover {
+             .svg-wrapper {
+                 animation: fly-1 0.6s ease-in-out infinite alternate;
+             }
+
+             svg {
+                 transform: translateX(1.2em) rotate(45deg) scale(1.1);
+             }
+
+             span {
+                 transform: translateX(5em);
+             }
+         }
+
+         &:active {
+             transform: scale(0.95);
+         }
      }
+
+     @keyframes fly-1 {
+         from {
+             transform: translateY(0.1em);
+         }
+
+         to {
+             transform: translateY(-0.1em);
+         }
+     }
+
+
+     //  .flat-button {
+     //      color: #ffd770;
+     //      background: transparent;
+     //      font-size: 11px;
+     //      letter-spacing: 3px;
+     //      text-decoration: none;
+     //      padding: 8px 10px;
+     //      border: 1px solid #ffd700;
+     //      border-radius: 10px;
+     //      font-family: sans-serif;
+     //      cursor: pointer;
+     //      display: block;
+     //      margin-left: 580px;
+
+
+     //      animation: pulseglow 2s infinite ease-in-out;
+
+     //      &:hover {
+     //          background: #ffd700;
+     //          color: #333;
+     //          box-shadow: #ffd700;
+     //          animation-play-state: paused;
+
+
+     //      }
+
+     //  }
 
  }
 
