--- a/src/Components/Projects/index.scss
+++ b/src/Components/Projects/index.scss
@@ -26,10 +26,25 @@
             padding: 2rem;
             text-align: left;
             box-shadow: 0 8px 18px rgba(0,0,0,0.4);
+            display: flex;
+            gap: 1.5rem;
+            align-items: center;
+
 
             opacity: 0;
             transform: translateY(50px);
             animation: slideUp 0.8s ease forwards;
+
+            img{
+                width: 150px;
+                height: 150px;
+                object-fit: cover;
+                border-radius: 15px;
+            }
+
+            .card-content{
+                flex:1;
+            }
 
             .slide-cards:nth-child(1){
                 animation-delay: 0.2s;
