Updated the about me text

--- a/src/Components/Projects/index.scss
+++ b/src/Components/Projects/index.scss
@@ -25,6 +25,7 @@
         .slide-cards{
             color: #ffffff;
             font-size: 15px;
+            text-decoration: none;
             letter-spacing: 1px;
             font-family: sans-serif;
             width:100%;
