changed some small visuals

--- a/src/Components/About/index.scss
+++ b/src/Components/About/index.scss
@@ -14,6 +14,8 @@
 .cubespinner {
     width: 200px;
     height: 200px;
+    bottom: 100px;
+    right: 5px;
     position: relative;
     animation-name: spincube;
     animation-timing-function: ease-in-out;
